Ajuste de bugs visuales

--- a/netlify.toml
+++ b/netlify.toml
@@ -33,6 +33,7 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
+    cache-control = "public, max-age=0, must-revalidate"
 
 # Caché largo para assets versionados
 [[headers]]
@@ -139,10 +140,6 @@
   function = "i18n"
 # (Si más adelante quieres evitar que corra en /assets/ o /images/, podemos
 #  afinar el patrón de rutas; ver docs de declaraciones de Edge Functions.)  # :contentReference[oaicite:1]{index=1}
-
-# ============================
-# Lighthouse plugin (auditoría)
-# ============================
 
 # ============================
 # Lighthouse plugin (auditoría)
