--- a/netlify.toml
+++ b/netlify.toml
@@ -33,7 +33,7 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
-    cache-control = "public, max-age=0, must-revalidate"
+    Cache-control = "public, max-age=0, must-revalidate"
 
 # Caché largo para assets versionados
 [[headers]]
